--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: GBI PPL Riau
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Menyiapkan umat yang layak bagi Tuhan
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://farm5.staticflickr.com/4153/5082844455_9123ceedc0_m.jpg
 
 #
 # Flags below are optional
